index.html edited

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Habit Tracker (React 19 + Vite 5)</title>
+    <title>Habit Tracker App</title>
 
     <!-- PWA Metadata -->
     <meta name="theme-color" content="#3B82F6" />
