--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <script type="module" src="/src/main.jsx"></script>
 
     <!-- PWA Registration (optional) -->
-    <script>
+    <!-- <script>
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", () => {
           navigator.serviceWorker.register("/sw.js");
         });
       }
-    </script>
+    </script> -->
   </body>
 </html>
